--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,9 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Register</title>
+    <link href="styles/main.css" rel="stylesheet">
+    <link href="styles/register.css" rel="stylesheet">
 </head>
 <body>
-
+<header th:replace="~{fragments/header :: not-logged-in-header}"></header>
+<main class="margin-top">
+    <h3 class="margin-top">Create an Account</h3>
+    <form method="post" action="/register">
+        <div>
+            <label>Enter your full name</label>
+            <input name="fullName" type="text" required>
+        </div>
+        <div>
+            <label>Enter your user username</label>
+            <input name="username" minlenght="3" type="text" required>
+        </div>
+        <div>
+            <label>Enter your password</label>
+            <input name="password" minlenght="4" type="password" required>
+        </div>
+        <div>
+            <label>Enter your email</label>
+            <input name="email" type="email" required>
+        </div>
+        <div>
+            <label>Enter your location</label>
+            <input name="location" type="text" required>
+        </div>
+        <div>
+            <label>Enter your Date of birth</label>
+            <input name="dateOfBirth"  type="date" required>
+        </div>
+        <div>
+            <label>Enter your chat color</label>
+            <input name="chatColor" type="color" required>
+        </div>
+        <div>
+            <label>Enter your profile picture url</label>
+            <input name="profilePictureUrl" type="url" required>
+        </div>
+        <div>
+            <button class="button green-theme" type="submit">Register</button>
+            <button class="button red-theme" type="reset">Clear form</button>
+        </div>
+    </form>
+</main>
 </body>
 </html>
