--- a/src/main/resources/templates/add-movie.html
+++ b/src/main/resources/templates/add-movie.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Add Movie</title>
+  <link href="../static/css/main.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Add Movie</title>
+
 </head>
 <body>
+<header th:replace="~{fragments/header :: not-logged-in-header}"></header>
 <main class="margin-top">
   <h3 class="margin-top">Add Movie</h3>
   <form method="post" action="/add-movie">
