--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<header th:fragment="not-logged-in-header">
+    <head><link rel="stylesheet" href="../../static/css/header.css"></head>
+    <div class="header-container">
+        <h1 class="header-title">Movie Collection</h1>
+    </div>
+    <nav class="movie-nav">
+        <a class="nav-link" href="/static">Home</a>
+        <a class="nav-link" href="/register">Register</a>
+        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/search">Search Movies</a>
+    </nav>
+</header>
