--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="../static/css/main.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Register</title>
 </head>
 <body>
+<header th:replace="~{fragments/header :: not-logged-in-header}"></header>
     <main class="margin-top">
         <h3 class="margin-top">Register</h3>
         <form method="post" action="/register">
