Main page front, empty files for rest of the pages

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <header th:fragment="not-logged-in-header">
-    <head><link rel="stylesheet" href="../../static/css/header.css"></head>
+    <head><link rel="stylesheet" href="/styles/header.css"></head>
     <div class="header-container">
         <h1 class="header-title">Movie Collection</h1>
     </div>
