--- a/src/main/resources/templates/add-movie.html
+++ b/src/main/resources/templates/add-movie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href="../static/css/main.css" rel="stylesheet">
+  <link href="/styles/main.css" rel="stylesheet">
   <meta charset="UTF-8">
   <title>Add Movie</title>
 
