--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="../static/css/main.css" rel="stylesheet">
+    <link href="../static/styles/main.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Register</title>
 </head>
