--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container main-body">
         <div class="row justify-content-center">
             <div class="col-12-lg text-center pt-25 w-100 text-light">
                 <h1 class="font-weight-bold text-lg text-shadow">Movie Collection</h1>
@@ -61,6 +61,60 @@
             </div>
         </div>
     </div>
+
+    <div class="card card-hidden col-md-6 text-center custom-card">
+        <div class="card-header">
+            <h5 class="card-title custom-title">Featured Today</h5>
+        </div>
+        <div class="card-body custom-card-body">
+            <div class="row justify-content-center">
+                <div class="col-md-4">
+                    <div class="hover-container">
+                        <img src="/images/movie1.jpg" class="mr-3 movie-image" alt="Movie Image">
+                        <div class="hover-content">
+                            <h5 class="mt-0 mb-1">The Little Mermaid</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="media-body">
+                        <p class="my-2">Beloved story of Ariel, a beautiful and spirited young mermaid with a thirst for adventure.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-4">
+                    <div class="hover-container">
+                        <img src="/images/movie2.jpg" class="mr-3 movie-image" alt="Movie Image">
+                        <div class="hover-content">
+                            <h5 class="mt-0 mb-1">The Flash</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="media-body">
+                        <p class="my-2">Barry Allen uses his super speed to change the past, but his attempt to save his family creates a world without superheroes.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-4">
+                    <div class="hover-container">
+                        <img src="/images/movie3.jpg" class="mr-3 movie-image" alt="Movie Image">
+                        <div class="hover-content">
+                            <h5 class="mt-0 mb-1">Transformers: Rise of the Beasts</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="media-body">
+                        <p class="my-2">Based on the 'Transformers' spin-off 'Beast Wars' which features robots that transform into robotic animals.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 </body>
 
