--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -37,12 +37,14 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item" th:if="${session.loggedIn}">
+                        <a href="/logout" class="nav-link">Logout <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="nav-item" th:unless="${session.loggedIn}">
                         <a href="/login" class="nav-link">Login <i class="fa fa-user" aria-hidden="true"></i></a>
                     </li>
-                    <li class="nav-item">
-                        <a href="/register" class="nav-link">Signup <i class="fa fa-user-plus"
-                                                                       aria-hidden="true"></i></a>
+                    <li class="nav-item" th:unless="${session.loggedIn}">
+                        <a href="/register" class="nav-link">Signup <i class="fa fa-user-plus" aria-hidden="true"></i></a>
                     </li>
                 </ul>
             </div>
