--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,35 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
     <title>Register</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/main-left.css">
 </head>
+
 <body>
-<header th:replace="~{fragments/header :: not-logged-in-header}"></header>
-    <main class="margin-top">
-        <h3 class="margin-top">Register</h3>
-        <form method="post" action="/register">
-            <div>
-                <label>Enter your name</label>
-                <input name="name" type="text" required>
+<div class="font-wrapper">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="/search">Movie Collection</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+                    aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavId">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/about" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/search">Search</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact">Contact</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item" th:if="${session.loggedIn}">
+                        <a href="/logout" class="nav-link">Logout <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="nav-item" th:unless="${session.loggedIn}">
+                        <a href="/login" class="nav-link">Login <i class="fa fa-user" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="nav-item" th:unless="${session.loggedIn}">
+                        <a href="/register" class="nav-link">Signup <i class="fa fa-user-plus" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
             </div>
-            <div>
-                <label>Enter your email</label>
-                <input name="email" type="email" required>
+        </div>
+    </nav>
+
+    <div class="container container-narrow">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 text-left">
+                <h1 class="font-weight-bold">Register</h1>
+                <form method="post" action="/register">
+                    <div class="form-group">
+                        <label for="name">Enter your name</label>
+                        <input id="name" name="name" type="text" class="form-control form-control-lg long-input" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Enter your email</label>
+                        <input id="email" name="email" type="email" class="form-control form-control-lg long-input" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Enter your password</label>
+                        <input id="password" name="password" type="password" class="form-control form-control-lg long-input" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="dateOfBirth">Enter your Date of Birth</label>
+                        <input id="dateOfBirth" name="dateOfBirth" type="date" class="form-control form-control-lg long-input" required>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary red-button" type="submit">Register</button>
+                        <button class="btn btn-secondary" type="reset">Clear form</button>
+                    </div>
+                </form>
             </div>
-            <div>
-                <label>Enter your password</label>
-                <input name="password" type="password" required>
-            </div>
-            <div>
-                <label>Enter your Date of Birth</label>
-                <input name="dateOfBirth" type="date" required>
-            </div>
-            <div>
-                <button class="button green-theme" type="submit">Register</button>
-                <button class="button red-theme" type="reset">Clear form</button>
-            </div>
-        </form>
-    </main>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+            integrity="sha384-pzjw8f+uaZu2c+0Em+qXlvFqjjr7vAC9N1o0kY/02Dw2Fh8Tv68v3S4gJJqFq6yN"
+            crossorigin="anonymous"></script>
+</div>
 </body>
+
 </html>
