--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -28,12 +28,13 @@ body {
 }
 .custom-card {
     background-image: url("/images/film.jpg");
+    opacity: 0.8;
     background-size: cover;
     background-position: center;
 }
 
 .custom-title {
-    font-size: 24px;
+    font-size: 36px;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
