--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -70,45 +70,57 @@
             <div class="row justify-content-center">
                 <div class="col-md-4">
                     <div class="hover-container">
-                        <img src="/images/movie1.jpg" class="mr-3 movie-image" alt="Movie Image">
+                        <a href="/movie1-page">
+                            <img src="/images/movie1.jpg" class="mr-3 movie-image" alt="Movie Image">
+                        </a>
                         <div class="hover-content">
-                            <h5 class="mt-0 mb-1">The Little Mermaid</h5>
+                            <h5 class="mt-0 mb-1">
+                                <a href="/movie1-page">The Little Mermaid</a>
+                            </h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-8">
                     <div class="media-body">
-                        <p class="my-2">Beloved story of Ariel, a beautiful and spirited young mermaid with a thirst for adventure.</p>
+                        <p class="my-2">Beloved story of Ariel, a beautiful and spirited young mermaid with a thirst for adventure. The youngest of King Triton's daughters, Ariel is a beautiful and spirited young mermaid with a thirst for adventure. Longing to find out more about the world beyond the sea, Ariel visits the surface and falls for the dashing Prince Eric.</p>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-4">
                     <div class="hover-container">
-                        <img src="/images/movie2.jpg" class="mr-3 movie-image" alt="Movie Image">
+                        <a href="/movie2-page">
+                            <img src="/images/movie2.jpg" class="mr-3 movie-image" alt="Movie Image">
+                        </a>
                         <div class="hover-content">
-                            <h5 class="mt-0 mb-1">The Flash</h5>
+                            <h5 class="mt-0 mb-1">
+                                <a href="/movie2-page">The Flash</a>
+                            </h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-8">
                     <div class="media-body">
-                        <p class="my-2">Barry Allen uses his super speed to change the past, but his attempt to save his family creates a world without superheroes.</p>
+                        <p class="my-2">Barry Allen is struck by a bolt of lightning and thus, an extraordinary power is born inside him, he uses this power to run back in time and save his mother and creates a world without heroes and General Zod has returned. To defeat him, his only hope rest in the hands of a retired Batman, another Barry and an imprisoned kryptonian.</p>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-4">
                     <div class="hover-container">
-                        <img src="/images/movie3.jpg" class="mr-3 movie-image" alt="Movie Image">
+                        <a href="/movie3-page">
+                            <img src="/images/movie3.jpg" class="mr-3 movie-image" alt="Movie Image">
+                        </a>
                         <div class="hover-content">
-                            <h5 class="mt-0 mb-1">Transformers: Rise of the Beasts</h5>
+                            <h5 class="mt-0 mb-1">
+                                <a href="/movie3-page">Transformers: Rise of the Beasts</a>
+                            </h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-8">
                     <div class="media-body">
-                        <p class="my-2">Based on the 'Transformers' spin-off 'Beast Wars' which features robots that transform into robotic animals.</p>
+                        <p class="my-2">Based on the 'Transformers' spin-off 'Beast Wars' which features robots that transform into robotic animals. Set in the 1990s, Transformers: Rise of the Beasts will take audiences on an action-packed, globetrotting adventure as the Maximals, Predacons, and Terrorcons join the battle between the Autobots and Decepticons on Earth.</p>
                     </div>
                 </div>
             </div>
